tdf#164997 - sc refactor and optimize LET function calculation

With the original solution the embeded LET function into another
functions caused unexpected error values.

Such as: IFERROR(LET(...)...) gave error for non-error LET result

Change-Id: I5f09a8771ce38492269cfeb567b9c3357cfd510c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/181662
Reviewed-by: Balazs Varga <balazs.varga.extern@allotropia.de>
Tested-by: Jenkins
Signed-off-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/181764